--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,6 +53,25 @@
           </button>
         </form>
       </section>
+      
+      <!-- Summarize Form -->
+      <button
+        id="summarizeBtn"
+        type="button"
+        class="mt-4 px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
+      >
+        Summarize Today
+      </button>
+
+      <!-- Summary Display -->
+      <div
+        id="summaryBox"
+        class="mt-4 overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out p-4 border rounded bg-gray-50"
+      >
+        <h2 class="font-semibold mb-2">Today’s Summary</h2>
+        <p id="summaryText" class="text-gray-700 whitespace-pre-line"></p>
+      </div>
+
 
       <!-- Entries List -->
       <section class="bg-gray-900 border border-gray-800 rounded-xl p-4">
