fix frontend and js logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,98 +1,64 @@
+<!-- ================= index.html ================= -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Python Journal App</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Journal</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Markdown renderer -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+</head>
 
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
+<body class="bg-gradient-to-br from-gray-950 via-gray-900 to-gray-950 text-gray-100 min-h-screen">
+  <div class="max-w-3xl mx-auto p-6">
 
-  <body class="bg-gray-950 text-gray-100 min-h-screen">
-    <div class="max-w-3xl mx-auto p-6">
-      <header class="mb-6">
-        <h1 class="text-3xl font-bold">📝 Journal</h1>
-        <p class="text-gray-400 mt-1">
-          Create, edit, and delete journal entries (Flask + MongoDB).
-        </p>
-      </header>
+    <header class="mb-8">
+      <h1 class="text-4xl font-bold tracking-tight">Steven's AI Journal</h1>
+      <p class="text-gray-400 mt-2">Write daily thoughts. Get AI-powered summaries.</p>
+    </header>
 
-      <!-- Create Entry Form -->
-      <section class="bg-gray-900 border border-gray-800 rounded-xl p-4 mb-6">
-        <h2 class="text-xl font-semibold mb-3">Create Entry</h2>
+    <!-- Create Entry -->
+    <section class="bg-gray-900/80 backdrop-blur border border-gray-800 rounded-2xl p-5 mb-6 shadow-xl">
+      <h2 class="text-xl font-semibold mb-4">New Entry</h2>
+      <form id="createForm" class="space-y-4">
+        <input id="titleInput" type="text" placeholder="Title" class="w-full rounded-xl bg-gray-950 border border-gray-800 px-4 py-2 focus:ring-2 focus:ring-indigo-500 outline-none" required />
+        <textarea id="contentInput" placeholder="Write your thoughts..." rows="4" class="w-full rounded-xl bg-gray-950 border border-gray-800 px-4 py-2 focus:ring-2 focus:ring-indigo-500 outline-none" required></textarea>
+        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-2 rounded-xl transition">+ Add Entry</button>
+      </form>
+    </section>
 
-        <form id="createForm" class="space-y-3">
-          <div>
-            <label class="block text-sm text-gray-300 mb-1">Title</label>
-            <input
-              id="titleInput"
-              type="text"
-              class="w-full rounded-lg bg-gray-950 border border-gray-800 px-3 py-2 outline-none focus:ring focus:ring-gray-700"
-              placeholder="Today was..."
-              required
-            />
-          </div>
-
-          <div>
-            <label class="block text-sm text-gray-300 mb-1">Content</label>
-            <textarea
-              id="contentInput"
-              class="w-full rounded-lg bg-gray-950 border border-gray-800 px-3 py-2 outline-none focus:ring focus:ring-gray-700"
-              placeholder="Write your thoughts..."
-              rows="4"
-              required
-            ></textarea>
-          </div>
-
-          <button
-            type="submit"
-            class="bg-white text-gray-950 font-semibold px-4 py-2 rounded-lg hover:bg-gray-200 transition"
-          >
-            + Add Entry
-          </button>
-        </form>
-      </section>
-      
-      <!-- Summarize Form -->
-      <button
-        id="summarizeBtn"
-        type="button"
-        class="mt-4 px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
-      >
-        Summarize Today
-      </button>
-
-      <!-- Summary Display -->
-      <div
-        id="summaryBox"
-        class="mt-4 overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out p-4 border rounded bg-gray-50"
-      >
-        <h2 class="font-semibold mb-2">Today’s Summary</h2>
-        <p id="summaryText" class="text-gray-700 whitespace-pre-line"></p>
+    <!-- AI Summary -->
+    <section class="bg-gray-900/80 backdrop-blur border border-gray-800 rounded-2xl p-5 mb-6 shadow-xl">
+      <div class="flex items-center justify-between gap-3 flex-wrap">
+        <h2 class="text-xl font-semibold">AI Summary</h2>
+        <div class="flex gap-2 items-center">
+          <select id="periodSelect" class="bg-gray-950 border border-gray-800 rounded-lg px-3 py-2 text-sm">
+            <option value="daily">Daily</option>
+            <option value="weekly">Weekly</option>
+            <option value="monthly">Monthly</option>
+          </select>
+          <button id="summarizeBtn" class="px-4 py-2 bg-indigo-600 rounded-xl hover:bg-indigo-700 transition">Generate</button>
+        </div>
       </div>
 
+      <div id="summaryBox" class="mt-4 hidden">
+        <div id="loadingText" class="animate-pulse text-gray-400">Processing summary...</div>
+        <div id="summaryText" class="mt-3 prose prose-invert max-w-none"></div>
+      </div>
+    </section>
 
-      <!-- Entries List -->
-      <section class="bg-gray-900 border border-gray-800 rounded-xl p-4">
-        <div class="flex items-center justify-between mb-3">
-          <h2 class="text-xl font-semibold">Entries</h2>
-          <button
-            id="refreshBtn"
-            class="text-sm px-3 py-1 rounded-lg border border-gray-700 hover:bg-gray-800 transition"
-          >
-            Refresh
-          </button>
-        </div>
+    <!-- Entries -->
+    <section class="bg-gray-900/80 backdrop-blur border border-gray-800 rounded-2xl p-5 shadow-xl">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-semibold">Entries</h2>
+        <button id="refreshBtn" class="text-sm px-3 py-1 rounded-lg border border-gray-700 hover:bg-gray-800 transition">Refresh</button>
+      </div>
+      <div id="entriesList" class="space-y-3"></div>
+    </section>
 
-        <div id="statusText" class="text-sm text-gray-400 mb-3"></div>
+  </div>
 
-        <div id="entriesList" class="space-y-3">
-          <!-- Entries will render here -->
-        </div>
-      </section>
-    </div>
-
-    <script src="./script.js"></script>
-  </body>
+  <script src="./script.js"></script>
+</body>
 </html>
